[package]
name = "hashpipe"
version = "0.1.1"
authors = ["LinuxMercedes <LinuxMercedes@gmail.com>"]
description = "Unix pipes + IRC"
repository = "https://github.com/LinuxMercedes/hashpipe"
readme = "README.md"
license = "MIT"

[dependencies]
irc = "0.11.0"
clap = "~2.19.0"
chan = "~0.1.0"
chan-signal = "~0.1.0"
log = "0.3"
env_logger = "0.3"
isatty = "0.1"
