[package]
name = "hashpipe"
version = "0.2.0"
authors = ["LinuxMercedes <LinuxMercedes@gmail.com>"]
description = "Unix pipes + IRC"
repository = "https://github.com/LinuxMercedes/hashpipe"
readme = "README.md"
license = "GPLv3"

[dependencies]
irc = "0.13"
clap = "2"
chan = "~0.1.0"
chan-signal = "~0.1.0"
log = "0.3"
env_logger = "0.7"
isatty = "0.1"
